load in Timespan toList-error fixed